i fixed the horizontal scrolling, still need to style the scroller

--- a/src/assets/css/myEventsPage.scss
+++ b/src/assets/css/myEventsPage.scss
@@ -1,20 +1,25 @@
 #myEvents {
   display: grid;
-  grid-template-columns: 1fr 1fr;
+  grid-template-columns: 70% 30%;
   height: 35rem;
+  max-width: 100%;
 
   #joinedEvents{
     display: flex;
     flex-direction: column;
-    height: 35rem;
+    gap: 0.5rem;
+    height: 32rem;
+    padding: 0.5rem;
+    max-width: 100%;
 
     h1{
       position: sticky;
       top: 0;
       text-align: center;
       margin-bottom: 1rem;
-      background-color: #cffcf2;
+      background-color: #b9f6ec;
       padding: 0.5rem;
+      border-radius: 0.5rem;
     }
 
     p{
@@ -23,38 +28,41 @@
       margin: 0.5rem;
     }
 
-    .sideScroll{
-      overflow: auto;
+    .horizontal {
+      background-color: black;
+      overflow-x: scroll;
       white-space: nowrap;
+      display: flex;
+      height: 10rem;
     }
-
     #ongoingEvents{
       height: 45%;
-      max-width: 100%;
-      overflow: auto;
+      overflow-x: scroll;
       white-space: nowrap;
     }
 
     #upcomingEvents{
       height: 45%;
-      max-width: 100%;
-      overflow: auto;
-      white-space: nowrap;
     }
   }
 
 
+
   #createdEvents{
-    height: 100%;
+    height: 80%;
+    width: 90%;
     overflow: auto;
     white-space: nowrap;
+    padding: 0.5rem;
+
     h1{
       position: sticky;
       top: 0;
       text-align: center;
       margin-bottom: 1rem;
-      background-color: #cffcf2;
+      background-color: #b9f6ec;
       padding: 0.5rem;
+      border-radius: 0.5rem;
     }
     p{
       padding: 0.5rem;
